# mPSAT-backend

./: .gitignore  README.md  eval_environ_samples.sh  eval_mpe_infer.ps1  nn2onnx.ps1  pyproject.toml  requirements-linux.txt  skl2onnx.ps1
data/: mpid_label.json  mpid_type.json
mccvSave/cnn/: metrics.csv
mccvSave/dt/: metrics.csv
mccvSave/lsvm/: metrics.csv
mccvSave/rf/: metrics.csv
repeatSave/cnn1000Save/1/: valreport_test.json
repeatSave/cnn1000Save/10/: valreport_test.json
repeatSave/cnn1000Save/2/: valreport_test.json
repeatSave/cnn1000Save/3/: valreport_test.json
repeatSave/cnn1000Save/4/: valreport_test.json
repeatSave/cnn1000Save/5/: valreport_test.json
repeatSave/cnn1000Save/6/: valreport_test.json
repeatSave/cnn1000Save/7/: valreport_test.json
repeatSave/cnn1000Save/8/: valreport_test.json
repeatSave/cnn1000Save/9/: valreport_test.json
repeatSave/cnnSave/1/: valreport_test.json
repeatSave/cnnSave/10/: valreport_test.json
repeatSave/cnnSave/2/: valreport_test.json
repeatSave/cnnSave/3/: valreport_test.json
repeatSave/cnnSave/4/: valreport_test.json
repeatSave/cnnSave/5/: valreport_test.json
repeatSave/cnnSave/6/: valreport_test.json
repeatSave/cnnSave/7/: valreport_test.json
repeatSave/cnnSave/8/: valreport_test.json
repeatSave/cnnSave/9/: valreport_test.json
repeatSave/dtSave/1/: valDT_test.json
repeatSave/dtSave/10/: valDT_test.json
repeatSave/dtSave/2/: valDT_test.json
repeatSave/dtSave/3/: valDT_test.json
repeatSave/dtSave/4/: valDT_test.json
repeatSave/dtSave/5/: valDT_test.json
repeatSave/dtSave/6/: valDT_test.json
repeatSave/dtSave/7/: valDT_test.json
repeatSave/dtSave/8/: valDT_test.json
src/: config.py  convert_model.py  dataset.py  ds_generate.py  dt.py  eval_environ_samples.py  generate_dataset.py  infer.py  infer_base.py  infer_nn.py  infer_skl.py  main.py  mccv.py  mccvSK.py  model.py  model_pl.py  nn2onnx.py  rf.py  sk2onnx.py  svm.py  train_cnn.py  train_sk.py  utils.py
(+38 files in other folders)
